fix about title on mobile

--- a/components/about.module.css
+++ b/components/about.module.css
@@ -122,6 +122,7 @@
   }
 
   .title {
+    font-size: 28px;
     padding-top: 0;
   }
 
